Mix Color Node removed from search menu. T101700 follow up. #102118

Closed
opened 2022-10-28 09:56:42 +02:00 by Evan Wilson · 33 comments
Member

System Information
Operating system: Windows-10-10.0.19043-SP0 64 Bits
Graphics card: GeForce GTX 470/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 391.35

Blender Version
Broken: version: 3.4.0 Alpha, since bdb5754147
Worked: before bdb5754147

Short description of error
The Mix RGB/Color Node no longer appears when using search.
It was removed in D13749: Node: Mix node, added back for UX reasons in D15887: UI: Add Mix Node to color section of add node menu, and accidentally removed again (while accidentally exposing the Legacy version) in D15568: Nodes: Add node group assets to search menus.
The legacy version was removed in a1bc05b200, but the current version still remains missing.

Prior to D15568 landing, it appeared as so:
Search Mix Color.png

search Mix Color GN.png

Exact steps for others to reproduce the error
Factory Startup.
Go to either the geometry node or shading node editors.
Type shift-A, S, Mix
See that only Mix appears.

**System Information** Operating system: Windows-10-10.0.19043-SP0 64 Bits Graphics card: GeForce GTX 470/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 391.35 **Blender Version** Broken: version: 3.4.0 Alpha, since bdb5754147 Worked: before bdb5754147 **Short description of error** The Mix RGB/Color Node no longer appears when using search. It was removed in [D13749: Node: Mix node](https://archive.blender.org/developer/D13749), added back for UX reasons in [D15887: UI: Add Mix Node to color section of add node menu](https://archive.blender.org/developer/D15887), and accidentally removed again (while accidentally exposing the Legacy version) in [D15568: Nodes: Add node group assets to search menus](https://archive.blender.org/developer/D15568). The legacy version was removed in a1bc05b200, but the current version still remains missing. Prior to [D15568](https://archive.blender.org/developer/D15568) landing, it appeared as so: ![Search Mix Color.png](https://archive.blender.org/developer/F13786743/Search_Mix_Color.png) ![search Mix Color GN.png](https://archive.blender.org/developer/F13786745/search_Mix_Color_GN.png) **Exact steps for others to reproduce the error** Factory Startup. Go to either the geometry node or shading node editors. Type `shift-A, S, Mix` See that only Mix appears.
Author
Member

Added subscriber: @EAW

Added subscriber: @EAW

#104027 was marked as duplicate of this issue

#104027 was marked as duplicate of this issue

#103833 was marked as duplicate of this issue

#103833 was marked as duplicate of this issue

#103687 was marked as duplicate of this issue

#103687 was marked as duplicate of this issue

#103333 was marked as duplicate of this issue

#103333 was marked as duplicate of this issue

#103312 was marked as duplicate of this issue

#103312 was marked as duplicate of this issue

#103047 was marked as duplicate of this issue

#103047 was marked as duplicate of this issue
Author
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Author
Member

Setting to high as it is a recent regression.

Setting to high as it is a recent regression.

Added subscriber: @mod_moder

Added subscriber: @mod_moder

I can confirm, although I'm not sure a high priority is needed. This is a regression, but not fatal

I can confirm, although I'm not sure a high priority is needed. This is a regression, but not fatal
Member

Added subscribers: @HooglyBoogly, @PratikPB2123

Added subscribers: @HooglyBoogly, @PratikPB2123
Member

Worked: before bdb5754147

cc @HooglyBoogly

although I'm not sure a high priority is needed. This is a regression, but not fatal

We triagers are suppose to raise the priority if it's a regression. Later module owner can change it based on the bug severity

> Worked: before bdb5754147 cc @HooglyBoogly > although I'm not sure a high priority is needed. This is a regression, but not fatal We triagers are suppose to raise the priority if it's a regression. Later module owner can change it based on the bug severity

Ah, it's clear

Ah, it's clear
Member

To solve this, I think the node type should have a function to return more search items, like link-drag-search.

To solve this, I think the node type should have a function to return more search items, like link-drag-search.

Added subscriber: @antgib

Added subscriber: @antgib

Rather then start a new report I'll just comment that this bug is still present in the final release of version 3.4 and while not ground breaking, due to muscle memory it is somewhat annoying.

Rather then start a new report I'll just comment that this bug is still present in the final release of version 3.4 and while not ground breaking, due to muscle memory it is somewhat annoying.
Author
Member

Added subscribers: @Rethburg, @OmarEmaraDev

Added subscribers: @Rethburg, @OmarEmaraDev

Added subscriber: @massoud3d

Added subscriber: @massoud3d

Added subscriber: @Fewralist

Added subscriber: @Fewralist

Added subscriber: @pquiram

Added subscriber: @pquiram
Member
Added subscribers: @Andrew-Herman, @ArtisticBee, @CharlieJolly

Added subscriber: @GAKUTADA

Added subscriber: @GAKUTADA

Yea still issue, and please please fix this asap. very annoying bug

Yea still issue, and please please fix this asap. very annoying bug

Removed subscriber: @massoud3d

Removed subscriber: @massoud3d
Member

Added subscriber: @sgariepy.3d

Added subscriber: @sgariepy.3d

Added subscriber: @carlosmu

Added subscriber: @carlosmu

The issue persists in 3.4.1 and 3.5.0 alpha

The issue persists in 3.4.1 and 3.5.0 alpha

So are we going to have a fix of this issue soon? Please ..

So are we going to have a fix of this issue soon? Please ..
Philipp Oeser removed the
Interest
Nodes & Physics
label 2023-02-10 08:43:31 +01:00

Merge the node mixes was a bad idea

Merge the node mixes was a bad idea
Hans Goudey added this to the Nodes & Physics project 2023-02-15 14:13:08 +01:00
Hans Goudey self-assigned this 2023-02-15 14:13:15 +01:00

mix color node got worse, I used to able swap A and B by changing one of them but now it will disconnect other if do same thing

mix color node got worse, I used to able swap A and B by changing one of them but now it will disconnect other if do same thing

New Blender update changed the way to flip sockets. Hold "alt" as you drag a socket to flip sockets.
https://projects.blender.org/blender/blender/commit/89aae4ac82e0

New Blender update changed the way to flip sockets. Hold "alt" as you drag a socket to flip sockets. https://projects.blender.org/blender/blender/commit/89aae4ac82e0

New Blender update changed the way to flip sockets. Hold "alt" as you drag a socket to flip sockets.
https://projects.blender.org/blender/blender/commit/89aae4ac82e0

I see, I am using alt for other thing in node editor. If I want to remap in keymap from alt to other, which one is it to change?

> New Blender update changed the way to flip sockets. Hold "alt" as you drag a socket to flip sockets. > https://projects.blender.org/blender/blender/commit/89aae4ac82e0 I see, I am using alt for other thing in node editor. If I want to remap in keymap from alt to other, which one is it to change?
Pratik Borhade added
Status
Resolved
and removed
Status
Confirmed
labels 2023-02-21 06:54:11 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No Assignees
12 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#102118
No description provided.