Nodes: Allow adding multiple search items per type in add menu

Add a per node type callback for creating node add search operations,
similar to the way link drag search is implemented (11be151d58ec0ca955).

Currently the searchable strings have to be separate items in the list.
In a separate step, we can look into adding invisible searchable text
to search items if that's still necessary.

Resolves #102118

Pull Request #104794